--- a/lucid/paper_draft.html
+++ b/lucid/paper_draft.html
@@ -20,7 +20,7 @@
   <tr> <td>Moment based OIT</td>             <td>4 power moments, 80 bits</td>          <td>2.64</td> </tr>
   <tr> <td>Moment based OIT</td>             <td>6 power moments, 112 bits</td>         <td>3.13</td> </tr>
   <tr> <td>Moment based OIT</td>             <td>4 trigonometric moments, 144 bits</td> <td>5.00</td> </tr>
-  <tr> <td>LucidRaster</td>                  <td></td>                                  <td>3.10</td> </tr>
+  <tr> <td>LucidRaster</td>                  <td></td>                                  <td>3.30</td> </tr>
 </tbody></table>
 
 <p>Performance values for WBOIT, MLAB and MBOIT are averages, relative to hardware alpha blending, taken from Moment-based OIT paper. The performance value for LucidRaster is an average computed from SW/HW values for all scenes and all tested GPUs. Because algorithms were tested in different environments, this table can provide only a very rough idea about the performance differences between previous OIT algorithms and LucidRaster.</p>
@@ -176,52 +176,54 @@ It will generate per-bin primitive lists for the same primitives which were proc
 <table style="text-align:right; font-family: monospace; font-size:0.9em;">
   <tbody><tr> <th colspan="6">NVidia GTX 3050 TI, Windows 10, 2560x1330</th> <th colspan="4" style="text-align:center">LucidRaster (SW) stages</th> </tr>
   <tr> <th>     Scene</th> <th>Samples</th> <th>S/THB</th> <th>   SW</th> <th>  HW</th> <th>SW/HW</th><th>setup</th> <th>binning</th> <th>low_raster</th> <th>hi_raster</th> </tr>
-  <tr> <td>Boxes     </td> <td> 12.11M</td> <td>17.91</td> <td> 1705</td> <td> 410</td> <td>4.16</td> <td>   23</td> <td>     52</td> <td>      1610</td> <td>        4</td> </tr>
-  <tr> <td>Bunny     </td> <td>  0.74M</td> <td> 3.33</td> <td>  337</td> <td>  77</td> <td>4.38</td> <td>   54</td> <td>     30</td> <td>       227</td> <td>        4</td> </tr>
-  <tr> <td>Conference</td> <td>  5.31M</td> <td>16.75</td> <td> 1103</td> <td> 242</td> <td>4.56</td> <td>   53</td> <td>     75</td> <td>       952</td> <td>        4</td> </tr>
-  <tr> <td>Dragon    </td> <td>  0.67M</td> <td> 1.25</td> <td>  834</td> <td> 387</td> <td>2.16</td> <td>  300</td> <td>     60</td> <td>       310</td> <td>      144</td> </tr>
-  <tr> <td>Gallery   </td> <td>  4.89M</td> <td> 3.07</td> <td> 2589</td> <td>1026</td> <td>2.52</td> <td>  556</td> <td>     73</td> <td>      1583</td> <td>      358</td> </tr>
-  <tr> <td>Hairball  </td> <td> 22.00M</td> <td> 2.89</td> <td>12077</td> <td>3527</td> <td>3.42</td> <td> 1766</td> <td>    298</td> <td>       264</td> <td>     9734</td> </tr>
-  <tr> <td>Powerplant</td> <td> 18.03M</td> <td> 3.60</td> <td> 9932</td> <td>4627</td> <td>2.15</td> <td> 2597</td> <td>    343</td> <td>       826</td> <td>     6151</td> </tr>
-  <tr> <td>San miguel</td> <td> 21.27M</td> <td> 6.57</td> <td> 9159</td> <td>3837</td> <td>2.39</td> <td> 2324</td> <td>    207</td> <td>      2248</td> <td>     4367</td> </tr>
-  <tr> <td>Scrub pine</td> <td>  3.26M</td> <td>24.44</td> <td>  570</td> <td> 186</td> <td>3.06</td> <td>   14</td> <td>     57</td> <td>       474</td> <td>        4</td> </tr>
-  <tr> <td>Sponza    </td> <td> 24.00M</td> <td>19.80</td> <td> 3839</td> <td>1692</td> <td>2.27</td> <td>   97</td> <td>    111</td> <td>      3608</td> <td>        3</td> </tr>
-  <tr> <td>Teapot    </td> <td>  1.71M</td> <td> 8.53</td> <td>  363</td> <td> 111</td> <td>3.27</td> <td>   21</td> <td>     34</td> <td>       282</td> <td>        4</td> </tr>
-  <tr> <td>White oak </td> <td>122.00M</td> <td>26.95</td> <td>12912</td> <td>6065</td> <td>2.13</td> <td>   33</td> <td>    192</td> <td>     12669</td> <td>        3</td> </tr>
-  <tr style="font-weight: bold;"> <td colspan="5">Averages:</td>                        <td>3.03</td> <td>  13%</td> <td>     5%</td> <td>       61%</td> <td>      19%</td> </tr>
+  <tr> <td>Boxes     </td> <td> 12.11M</td> <td>17.91</td> <td>1707 </td> <td> 401</td> <td>4.26</td> <td> 24  </td> <td>    53 </td> <td>      1609</td> <td>        4</td> </tr>
+  <tr> <td>Bunny     </td> <td>  0.74M</td> <td> 3.33</td> <td>350  </td> <td>  78</td> <td>4.49</td> <td> 53  </td> <td>    38 </td> <td>       234</td> <td>        4</td> </tr>
+  <tr> <td>Conference</td> <td>  5.31M</td> <td>16.75</td> <td>1158 </td> <td> 226</td> <td>5.12</td> <td> 58  </td> <td>    76 </td> <td>      1002</td> <td>        4</td> </tr>
+  <tr> <td>Dragon    </td> <td>  0.67M</td> <td> 1.25</td> <td>837  </td> <td> 248</td> <td>3.38</td> <td> 328 </td> <td>    51 </td> <td>       302</td> <td>      136</td> </tr>
+  <tr> <td>Gallery   </td> <td>  4.89M</td> <td> 3.07</td> <td>2621 </td> <td> 678</td> <td>3.87</td> <td> 771 </td> <td>    78 </td> <td>      1427</td> <td>      324</td> </tr>
+  <tr> <td>Hairball  </td> <td> 22.00M</td> <td> 2.89</td> <td>11518</td> <td>3564</td> <td>3.23</td> <td> 1756</td> <td>    244</td> <td>       355</td> <td>     9146</td> </tr>
+  <tr> <td>Powerplant</td> <td> 18.03M</td> <td> 3.60</td> <td>10121</td> <td>4761</td> <td>2.13</td> <td> 2720</td> <td>    346</td> <td>       838</td> <td>     6201</td> </tr>
+  <tr> <td>San miguel</td> <td> 21.27M</td> <td> 6.57</td> <td>9234 </td> <td>3667</td> <td>2.52</td> <td> 2391</td> <td>    216</td> <td>      2261</td> <td>     4349</td> </tr>
+  <tr> <td>Scrub pine</td> <td>  3.26M</td> <td>24.44</td> <td>575  </td> <td> 193</td> <td>2.98</td> <td> 15  </td> <td>    61 </td> <td>       474</td> <td>        4</td> </tr>
+  <tr> <td>Sponza    </td> <td> 24.00M</td> <td>19.80</td> <td>3910 </td> <td>1690</td> <td>2.31</td> <td> 98  </td> <td>    130</td> <td>      3658</td> <td>        3</td> </tr>
+  <tr> <td>Teapot    </td> <td>  1.71M</td> <td> 8.53</td> <td>373  </td> <td> 111</td> <td>3.36</td> <td> 23  </td> <td>    40 </td> <td>       285</td> <td>        4</td> </tr>
+  <tr> <td>White oak </td> <td>122.00M</td> <td>26.95</td> <td>13005</td> <td>6049</td> <td>2.15</td> <td> 37  </td> <td>    189</td> <td>     12759</td> <td>        3</td> </tr>
+  <tr style="font-weight: bold;"> <td colspan="5">Averages:</td>                        <td>3.32</td> <td>  14%</td> <td>     5%</td> <td>       60%</td> <td>      18%</td> </tr>
 
   <tr style="border-bottom:1px solid black"> <td colspan="100%"></td> </tr>
 
   <tr> <th colspan="6">AMD Radeon RX 6700 XT, Ubuntu 22.04, 1920x1031</th> <th colspan="4" style="text-align:center">LucidRaster (SW) stages</th> </tr>
   <tr> <th>     Scene</th> <th>Samples</th> <th> S/HB</th> <th>  SW</th> <th>  HW</th> <th>SW/HW</th><th>setup</th> <th>binning</th> <th>low_raster</th> <th>hi_raster</th> </tr>
-  <tr> <td>Boxes     </td> <td>  7.28M</td> <td>15.80</td> <td> 544</td> <td> 201</td> <td>2.71</td> <td>   10</td> <td>     17</td> <td>       506</td> <td>        5</td> </tr>
-  <tr> <td>Bunny     </td> <td>  0.44M</td> <td> 2.48</td> <td> 132</td> <td>  32</td> <td>4.12</td> <td>   17</td> <td>     19</td> <td>        85</td> <td>        5</td> </tr>
-  <tr> <td>Conference</td> <td>  3.11M</td> <td>14.77</td> <td> 366</td> <td>  99</td> <td>3.70</td> <td>   18</td> <td>     45</td> <td>       292</td> <td>        5</td> </tr>
-  <tr> <td>Dragon    </td> <td>  0.40M</td> <td> 1.15</td> <td> 280</td> <td> 143</td> <td>1.96</td> <td>   87</td> <td>     25</td> <td>        72</td> <td>       90</td> </tr>
-  <tr> <td>Gallery   </td> <td>  2.86M</td> <td> 2.48</td> <td> 931</td> <td> 358</td> <td>2.60</td> <td>  173</td> <td>     32</td> <td>       471</td> <td>      248</td> </tr>
-  <tr> <td>Hairball  </td> <td> 13.22M</td> <td> 2.38</td> <td>4630</td> <td>1099</td> <td>4.21</td> <td> 1053</td> <td>    140</td> <td>       131</td> <td>     3298</td> </tr>
-  <tr> <td>Powerplant</td> <td> 10.83M</td> <td> 3.27</td> <td>3477</td> <td>1422</td> <td>2.45</td> <td> 1208</td> <td>    147</td> <td>       232</td> <td>     1884</td> </tr>
-  <tr> <td>San miguel</td> <td> 12.59M</td> <td> 5.65</td> <td>3393</td> <td>1139</td> <td>2.98</td> <td> 1103</td> <td>     97</td> <td>       655</td> <td>     1531</td> </tr>
-  <tr> <td>Scrub pine</td> <td>  1.96M</td> <td>22.90</td> <td> 247</td> <td>  58</td> <td>4.26</td> <td>    6</td> <td>     24</td> <td>       205</td> <td>        6</td> </tr>
-  <tr> <td>Sponza    </td> <td> 13.97M</td> <td>17.66</td> <td>1196</td> <td> 381</td> <td>3.14</td> <td>   33</td> <td>     55</td> <td>      1054</td> <td>       48</td> </tr>
-  <tr> <td>Teapot    </td> <td>  1.03M</td> <td> 6.91</td> <td> 148</td> <td>  50</td> <td>2.96</td> <td>   11</td> <td>     17</td> <td>       108</td> <td>        5</td> </tr>
-  <tr> <td>White oak </td> <td> 71.41M</td> <td>25.68</td> <td>3484</td> <td>1598</td> <td>2.18</td> <td>   12</td> <td>     84</td> <td>      3376</td> <td>        6</td> </tr>
-  <tr style="font-weight: bold;"> <td colspan="5">Averages:</td>                       <td>3.18</td> <td>  14%</td> <td>     7%</td> <td>       57%</td> <td>      20%</td> </tr>
+  <tr> <td>Boxes     </td> <td>  7.28M</td> <td>15.80</td> <td> 546</td> <td> 202</td> <td>2.70</td> <td>   10</td> <td>     17</td> <td>       508</td> <td>        6</td> </tr>
+  <tr> <td>Bunny     </td> <td>  0.44M</td> <td> 2.48</td> <td> 131</td> <td>  32</td> <td>4.09</td> <td>   17</td> <td>     19</td> <td>        84</td> <td>        5</td> </tr>
+  <tr> <td>Conference</td> <td>  3.11M</td> <td>14.77</td> <td> 370</td> <td> 101</td> <td>3.66</td> <td>   19</td> <td>     44</td> <td>       296</td> <td>        5</td> </tr>
+  <tr> <td>Dragon    </td> <td>  0.40M</td> <td> 1.15</td> <td> 272</td> <td>  95</td> <td>2.86</td> <td>   88</td> <td>     25</td> <td>        68</td> <td>       85</td> </tr>
+  <tr> <td>Gallery   </td> <td>  2.86M</td> <td> 2.48</td> <td> 907</td> <td> 224</td> <td>4.05</td> <td>  186</td> <td>     31</td> <td>       453</td> <td>      232</td> </tr>
+  <tr> <td>Hairball  </td> <td> 13.22M</td> <td> 2.38</td> <td>4388</td> <td>1084</td> <td>4.05</td> <td>  991</td> <td>    116</td> <td>       152</td> <td>     3123</td> </tr>
+  <tr> <td>Powerplant</td> <td> 10.83M</td> <td> 3.27</td> <td>3532</td> <td>1533</td> <td>2.30</td> <td> 1260</td> <td>    144</td> <td>       237</td> <td>     1885</td> </tr>
+  <tr> <td>San miguel</td> <td> 12.59M</td> <td> 5.65</td> <td>3396</td> <td>1066</td> <td>3.19</td> <td> 1127</td> <td>     97</td> <td>       653</td> <td>     1513</td> </tr>
+  <tr> <td>Scrub pine</td> <td>  1.96M</td> <td>22.90</td> <td> 242</td> <td>  57</td> <td>4.25</td> <td>    6</td> <td>     24</td> <td>       200</td> <td>        6</td> </tr>
+  <tr> <td>Sponza    </td> <td> 13.97M</td> <td>17.66</td> <td>1194</td> <td> 375</td> <td>3.18</td> <td>   33</td> <td>     55</td> <td>      1052</td> <td>       47</td> </tr>
+  <tr> <td>Teapot    </td> <td>  1.03M</td> <td> 6.91</td> <td> 147</td> <td>  50</td> <td>2.94</td> <td>   11</td> <td>     18</td> <td>       107</td> <td>        5</td> </tr>
+  <tr> <td>White oak </td> <td> 71.41M</td> <td>25.68</td> <td>3500</td> <td>1624</td> <td>2.16</td> <td>   11</td> <td>     80</td> <td>      3397</td> <td>        7</td> </tr>
+  <tr style="font-weight: bold;"> <td colspan="5">Averages:</td>                       <td>3.29</td> <td>  15%</td> <td>     7%</td> <td>       57%</td> <td>      20%</td> </tr>
 </tbody></table>
+
 
 <h4 id="alpha-threshold"><a class="anchor" name="alpha-threshold" href="#alpha-threshold"><span class="octicon octicon-link"></span></a>Alpha threshold</h4>
 <p>When 'alpha_threshold' flag is enabled, shading stops once enough alpha value was accumulated in a given pixel. Rendering of some scenes can be much faster when this flag is used, especially in cases when lots of samples are hidden beneath an almost opaque layer of samples. The following speedups were achieved:</p>
 <table style="text-align:right; font-family: monospace; font-size:0.9em;">
   <tbody><tr> <th colspan="3">NVidia GTX 3050 TI, Windows 10, 2560x1330</th> <th colspan="2">alpha_threshold off<br><center>(default)</center></th> <th colspan="2">alpha_threshold on</th> </tr>
   <tr> <th>Scene     </th> <th>Scene opacity</th> <th>  HW</th> <th>   SW</th> <th>SW/HW</th> <th>   SW</th> <th>SW/HW</th> </tr>
-  <tr> <td>Boxes     </td> <td>0.5          </td> <td> 410</td> <td> 1705</td> <td>4.16 </td> <td> 1314</td> <td>3.20 </td> </tr>
-  <tr> <td>Boxes     </td> <td>0.8          </td> <td> 410</td> <td> 1705</td> <td>4.16 </td> <td> 1105</td> <td>2.70 </td> </tr>
-  <tr> <td>Hairball  </td> <td>0.5          </td> <td>3527</td> <td>12077</td> <td>3.42 </td> <td>10608</td> <td>3.00 </td> </tr>
-  <tr> <td>Powerplant</td> <td>0.5          </td> <td>4627</td> <td> 9932</td> <td>2.15 </td> <td> 9425</td> <td>2.04 </td> </tr>
-  <tr> <td>White oak </td> <td>0.8          </td> <td>6065</td> <td>12912</td> <td>2.15 </td> <td>10950</td> <td>1.81 </td> </tr>
+  <tr> <td>Boxes     </td> <td>0.5          </td> <td> 401</td> <td> 1707</td> <td>4.26 </td> <td> 1288</td> <td> 3.21</td> </tr>
+  <tr> <td>Boxes     </td> <td>0.8          </td> <td> 401</td> <td> 1707</td> <td>4.26 </td> <td> 1169</td> <td> 2.92</td> </tr>
+  <tr> <td>Hairball  </td> <td>0.5          </td> <td>3564</td> <td>11518</td> <td>3.23 </td> <td> 9784</td> <td> 2.75</td> </tr>
+  <tr> <td>Powerplant</td> <td>0.5          </td> <td>4761</td> <td>10121</td> <td>2.13 </td> <td> 9445</td> <td> 1.98</td> </tr>
+  <tr> <td>White oak </td> <td>0.5          </td> <td>6049</td> <td>13005</td> <td>2.15 </td> <td>13129</td> <td> 2.17</td> </tr>
+  <tr> <td>White oak </td> <td>0.8          </td> <td>6049</td> <td>13005</td> <td>2.15 </td> <td>11070</td> <td> 1.83</td> </tr>
 </tbody></table>
 
-<p>In other scenes gains were negligible.</p>
+<p>In other scenes the gains were negligible.</p>
 <h3 id="rendering-errors"><a class="anchor" name="rendering-errors" href="#rendering-errors"><span class="octicon octicon-link"></span></a>Rendering errors</h3>
 <p>Two-stage sorting technique fails in some cases. Those cases are rare and can be detected and dealt with properly. On the average number of invalid pixels is very small (0.17%, 0.02% with DF=8), so even if they were handled with a very slow shader, it shouldn't affect overall performance noticeably. LucidRaster currently doesn't handle those cases, but it will show invalid pixels when 'visualize_errors' flag is enabled.</p>
 <p>The number of invalid pixels depends on the geometrical complexity nearby surface intersections in the scene and on the size of the depth filter. What follows is a table with error statistics for different depth filter sizes.</p>
