--- a/lucid/paper_draft.html
+++ b/lucid/paper_draft.html
@@ -10,7 +10,7 @@
 <p>Two surveys cover a wide range of OIT algorithms: "A Survey of Multifragment Rendering" <a href="#refs-vasilakis-2020">[Vasilakis 2020]</a> and "Exploring and Expanding the Continuum of OIT Algorithms" <a href="#refs-wyman-2016">[Wyman 2016]</a>. </p>
 <p>With each next generation, GPUs become more and more feasible for general-purpose computations. Current GPUs already allow for the efficient implementation of software rasterizers. There are several interesting examples available. CudaRaster <a href="#refs-laine-2011">[Laine 2011]</a> and cuRE <a href="#refs-kenzel-2018">[Kenzel 2018]</a> are a general-purpose rasterizers. FreePipe <a href="#refs-liu-2010">[Liu 2010]</a> similarly to LucidRaster has a focus on multi-fragment effects. All three of these rasterizers are several times slower than hardware with CudaRaster being the fastest. Nanite <a href="#refs-karis-2021">[Karis 2021]</a> uses a simple software micro-poly rasterizer which can be up to 3x faster than a general-purpose GPU rasterizer.</p>
 <p>Most of the OIT algorithms are built around a hardware rasterizer, which is used for the accumulation and / or composition of fragments. There were successful attempts at using compute shaders for sprite rendering <a href="#refs-kohler-2016">[Köhler 2016]</a>, but in general, the core computation in a typical OIT algorithm happens in a fragment shader. This is a major restriction which limits the potential efficiency of OIT algorithms. LucidRaster is an attempt to break this restriction by implementing a software rasterizer which is tailored for the purpose of transparency rendering.</p>
-<p>LucidRaster performance is evaluated by comparing it with a simple hardware-based unsorted alpha-blended renderer. Moment-based OIT paper <a href="#refs-kenzel-2018">[Kenzel 2018]</a> contains a similar comparison which allows to compare (roughly) several different OIT algorithms:</p>
+<p>LucidRaster performance is evaluated by comparing it with a simple hardware-based unsorted alpha-blended renderer. Moment-based OIT paper <a href="#refs-peters-2018">[Peters 2018]</a> contains a similar comparison which allows to compare (roughly) several different OIT algorithms:</p>
 <table style="text-align:right; font-family: monospace; font-size:0.8em;">
   <tbody><tr> <th>Algorithm</th> <th>Parameters</th> <th>Relative running time</th> </tr>
   <tr> <td>Hardware alpha blending</td>      <td></td>                                  <td>1.00</td> </tr>
@@ -225,8 +225,8 @@ It will generate per-bin primitive lists for the same primitives which were proc
 
 <p>In other scenes the gains were negligible.</p>
 <h3 id="rendering-errors"><a class="anchor" name="rendering-errors" href="#rendering-errors"><span class="octicon octicon-link"></span></a>Rendering errors</h3>
-<p>Two-stage sorting technique fails in some cases. Those cases are rare and can be detected and dealt with properly. On the average number of invalid pixels is very small (0.17%, 0.02% with DF=8), so even if they were handled with a very slow shader, it shouldn't affect overall performance noticeably. LucidRaster currently doesn't handle those cases, but it will show invalid pixels when 'visualize_errors' flag is enabled.</p>
-<p>The number of invalid pixels depends on the geometrical complexity nearby surface intersections in the scene and on the size of the depth filter. What follows is a table with error statistics for different depth filter sizes.</p>
+<p>Two-stage sorting technique fails in some cases. Those cases are rare and can be detected and dealt with properly. On the average the number of invalid pixels is very small (0.17%, 0.02% with DF=8), so even if they were handled with a very slow shader, it shouldn't affect overall performance noticeably. LucidRaster currently doesn't handle those cases, but it will show invalid pixels when 'visualize_errors' flag is enabled.</p>
+<p>The number of invalid pixels depends on the geometrical complexity of nearby surface intersections in the scene and on the size of the depth filter. What follows is a table with error statistics for different depth filter sizes.</p>
 <table style="text-align:right; font-family: monospace; font-size:0.9em;">
   <tbody><tr style="text-align:center"> <th></th> <th colspan="3">Invalid pixels (total)</th> <th colspan="3">Invalid pixels (percentage)</th> <th colspan="3">Rendering time compared to DF=3</th> </tr>
   <tr> <th>     Scene</th> <th> DF=3</th> <th>DF=8</th> <th>DF=12</th> <th>    DF=3</th> <th>DF=8</th> <th>DF=12</th> <th>DF=8</th> <th>DF=12</th></tr>
@@ -283,7 +283,7 @@ It will generate per-bin primitive lists for the same primitives which were proc
 <h4 id="meshlets"><a class="anchor" name="meshlets" href="#meshlets"><span class="octicon octicon-link"></span></a>Meshlets</h4>
 <ul>
 <li>Meshlets should be able to greatly improve performance of setup &amp; binning stages.</li>
-<li>Possibly with meshlets memory requirements could be decreased, because more compressed storage is possible for pre-computed data.</li>
+<li>Possibly with meshlets memory requirements could be decreased, because more compressed storage would be possible for pre-computed data.</li>
 </ul>
 <h4 id="multi-material-support"><a class="anchor" name="multi-material-support" href="#multi-material-support"><span class="octicon octicon-link"></span></a>Multi-material support</h4>
 <ul>
@@ -295,7 +295,7 @@ It will generate per-bin primitive lists for the same primitives which were proc
 <h4 id="optimizations"><a class="anchor" name="optimizations" href="#optimizations"><span class="octicon octicon-link"></span></a>Optimizations</h4>
 <ul>
 <li>Currently lucid uses 32x32 bins, but it could be beneficial to use 64x64 bins in areas with low density of triangles and 16x16 in high-density areas.</li>
-<li>It should be possible to run high-rasterizers and low-rasterizers at the same time; it would increase parallelism, but it would also require.</li>
+<li>It should be possible to run high-rasterizers and low-rasterizers at the same time, it would increase parallelism.</li>
 <li>There are more places in code where parallelism could be improved, but it requires more work.</li>
 </ul>
 <h2 id="5-vulkan-glossary"><a class="anchor" name="5-vulkan-glossary" href="#5-vulkan-glossary"><span class="octicon octicon-link"></span></a>5. Vulkan glossary</h2>
